📱 Fix: prevent page scroll in Add Task on mobile – header, footer & buttons fixed

--- a/src/app/main-content/add-task/add-task.component.scss
+++ b/src/app/main-content/add-task/add-task.component.scss
@@ -2,6 +2,15 @@
 @import "../../../assets/styles/variables.scss";
 @import "../../../assets/fonts/fonts.scss";
 
+
+.add-task-header {
+  display: flex;
+  justify-content: flex-start;
+  padding: 0 50px;
+  height: 96px;
+  margin-top: 30px;
+}
+
 .task-section {
   container-type: inline-size;
   container-name: task-section;
@@ -12,8 +21,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-height: calc(100vh - 96px);
-    padding: 110px 100px;
+    // max-height: calc(100vh - 96px);
+    // padding: 110px 100px;
+    height: calc(100dvh - 100px);
+    overflow: auto;
   }
 
   h2 {
@@ -35,7 +46,7 @@
   task-form {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    // overflow-y: auto;
   }
 }
 
@@ -44,12 +55,13 @@ span {
 }
 
 .task-scroll-container {
-  overflow-y: auto;
+  // overflow-y: auto;
 }
 
 .task-form-wrapper {
   @include dFlex($jc: space-between, $ai: flex-start);
   flex-grow: 1;
+  margin: 0 50px;
 }
 
 .vertical-divider {
@@ -65,7 +77,7 @@ span {
 
 .footnote {
   @include dFlex($jc: space-between, $ai: center);
-  padding: 24px 0;
+  padding: 45px;
 
   .button-wrapper {
     display: flex;
@@ -134,8 +146,8 @@ span {
 
 @media screen and (max-height: 900px) {
   .task-section-content {
-    padding: 20px 20px !important;
-    overflow-y: auto;
+    // padding: 20px 20px !important;
+    // overflow-y: auto;
   }
 }
 
@@ -143,16 +155,16 @@ span {
   .task-section-content {
    max-height: calc(100vh - 96px - 80px) !important;
     // overflow-y: auto;
-    padding: 20px 20px !important;
-    scrollbar-width: none !important;
+    // padding: 20px 20px !important;
+    // scrollbar-width: none !important;
   }
 
   @container task-section (max-width: 1200px) {
     .task-section-content {
       max-height: calc(100vh - 96px - 80px) !important;
       // overflow-y: auto;
-      padding: 20px 20px !important;
-      scrollbar-width: none !important;
+      // padding: 20px 20px !important;
+      // scrollbar-width: none !important;
     }
   }
 }
@@ -178,7 +190,7 @@ span {
 
 @container task-section (max-width: 660px) {
   .task-section-content {
-    padding: 20px !important;
+    // padding: 20px !important;
 
     h2 {
       padding-bottom: 24px !important;
@@ -218,5 +230,28 @@ span {
     button {
       padding: 10px 0;
     }
+  }
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 1000px){
+
+  .add-task-main {
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    height: calc(100dvh - 460px);
+  }
+
+  .footnote {
+    // position: fixed;
+    // bottom: 100px;
+    // left: 16px;
+    // right: 16px;
   }
 }
