--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ button {
   cursor: pointer;
 }
 
-html, body { height: 100%; }
+html, body { height: 100%; overflow: hidden;}
 
 // Not needed anymore, MD styling
 
